FindaVenue/force-app/main/default/objects/Account/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City centre</fullName>
            </value>
            <value>
                <fullName>City centre Leeson street</fullName>
            </value>
            <value>
                <fullName>City centre off Grafton street</fullName>
            </value>
            <value>
                <fullName>City centre Harcourt street</fullName>
            </value>
            <value>
                <fullName>City centre Camden street</fullName>
            </value>
            <value>
                <fullName>City centre IFSC</fullName>
            </value>
            <value>
                <fullName>City centre Temple Bar</fullName>
            </value>
            <value>
                <fullName>City centre off O&apos;Connell street</fullName>
            </value>
            <value>
                <fullName>City centre D&apos;olier street</fullName>
            </value>
            <value>
                <fullName>City centre Georges street</fullName>
            </value>
            <value>
                <fullName>City centre Dame street</fullName>
            </value>
            <value>
                <fullName>City centre Merrion row</fullName>
            </value>
            <value>
                <fullName>City centre Dawson street</fullName>
            </value>
            <value>
                <fullName>Dublin 3</fullName>
            </value>
            <value>
                <fullName>Dublin 5</fullName>
            </value>
            <value>
                <fullName>Dublin 7</fullName>
            </value>
            <value>
                <fullName>Dublin 9</fullName>
            </value>
            <value>
                <fullName>Dublin 11</fullName>
            </value>
            <value>
                <fullName>Dublin 13</fullName>
            </value>
            <value>
                <fullName>Dublin 15</fullName>
            </value>
            <value>
                <fullName>Dublin 4</fullName>
            </value>
            <value>
                <fullName>Dublin 6</fullName>
            </value>
            <value>
                <fullName>Dublin 8</fullName>
            </value>
            <value>
                <fullName>Dublin 12</fullName>
            </value>
            <value>
                <fullName>Dublin 14</fullName>
            </value>
            <value>
                <fullName>Dublin 16</fullName>
            </value>
            <value>
                <fullName>Dublin 18</fullName>
            </value>
            <value>
                <fullName>Dublin South county</fullName>
            </value>
            <value>
                <fullName>Dublin North county</fullName>
            </value>
            <value>
                <fullName>Outside Dublin-Leinster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>