FindaVenue/force-app/main/default/objects/Account/fields/Band_Venue__c.field-meta.xml
<CustomField>
    <fullName>Band_Venue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Band Venue</label>
    <type>Checkbox</type>
</CustomField>