FindaVenue/force-app/main/default/objects/Account/fields/Banquet_Capacity_double__c.field-meta.xml
<CustomField>
    <fullName>Banquet_Capacity_double__c</fullName>
    <label>Banquet Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>