FindaVenue/force-app/main/default/objects/Account/fields/Barbeque_Price__c.field-meta.xml
<CustomField>
    <fullName>Barbeque_Price__c</fullName>
    <label>Barbeque Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>