FindaVenue/force-app/main/default/objects/Account/fields/Boardroom_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Boardroom_Capacity__c</fullName>
    <label>Boardroom Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>