FindaVenue/force-app/main/default/objects/Account/fields/Bowled_Food_Price__c.field-meta.xml
<CustomField>
    <fullName>Bowled_Food_Price__c</fullName>
    <label>Bowled Food Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>