FindaVenue/force-app/main/default/objects/Account/fields/Breakfast_Price__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Price__c</fullName>
    <label>Breakfast Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>