FindaVenue/force-app/main/default/objects/Account/fields/Buffet_Price__c.field-meta.xml
<CustomField>
    <fullName>Buffet_Price__c</fullName>
    <label>Buffet Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>