FindaVenue/force-app/main/default/objects/Account/fields/Cabaret_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Cabaret_Capacity__c</fullName>
    <label>Cabaret Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>