FindaVenue/force-app/main/default/objects/Account/fields/Canapes_Price__c.field-meta.xml
<CustomField>
    <fullName>Canapes_Price__c</fullName>
    <label>Canapes Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>