FindaVenue/force-app/main/default/objects/Account/fields/Christmas_Package_Price__c.field-meta.xml
<CustomField>
    <fullName>Christmas_Package_Price__c</fullName>
    <label>Christmas Package Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>