FindaVenue/force-app/main/default/objects/Account/fields/Classroom_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Classroom_Capacity__c</fullName>
    <label>Classroom Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>