FindaVenue/force-app/main/default/objects/Account/fields/Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Closing_Time__c</fullName>
    <label>Closing Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>