FindaVenue/force-app/main/default/objects/Account/fields/Commission_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Commission_Agreement__c</fullName>
    <label>Commission Agreement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>