FindaVenue/force-app/main/default/objects/Account/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>Contact__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>