FindaVenue/force-app/main/default/objects/Account/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>