FindaVenue/force-app/main/default/objects/Account/fields/Copy_Billing_Address_to_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_Billing_Address_to_Shipping_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Billing Address to Shipping Address</label>
    <type>Checkbox</type>
</CustomField>