FindaVenue/force-app/main/default/objects/Account/fields/Deposit_Paid_To__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid_To__c</fullName>
    <label>Deposit Paid To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAV</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>