FindaVenue/force-app/main/default/objects/Account/fields/Dinner_Buffet_Price__c.field-meta.xml
<CustomField>
    <fullName>Dinner_Buffet_Price__c</fullName>
    <label>Dinner Buffet Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>