FindaVenue/force-app/main/default/objects/Account/fields/Drink_Promotions__c.field-meta.xml
<CustomField>
    <fullName>Drink_Promotions__c</fullName>
    <label>Drink Promotions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>