FindaVenue/force-app/main/default/objects/Account/fields/Entire_Venue_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Entire_Venue_Capacity__c</fullName>
    <label>Entire Venue Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>