FindaVenue/force-app/main/default/objects/Account/fields/Evening_Fee__c.field-meta.xml
<CustomField>
    <fullName>Evening_Fee__c</fullName>
    <label>Evening Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>