FindaVenue/force-app/main/default/objects/Account/fields/Event_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Event_Scenarios__c</fullName>
    <label>Event Scenarios</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summer party</fullName>
            </value>
            <value>
                <fullName>Christmas party</fullName>
            </value>
            <value>
                <fullName>Gala Dinner</fullName>
            </value>
            <value>
                <fullName>Large Reception standing party</fullName>
            </value>
            <value>
                <fullName>After work party-shared areas</fullName>
            </value>
            <value>
                <fullName>Function room birthdays 30th,40th</fullName>
            </value>
            <value>
                <fullName>Function room older age profile 50th,60th 70th, 80th</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Company overnight stays/Corporate away days</fullName>
            </value>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Private Dining /Restaurant</fullName>
            </value>
            <value>
                <fullName>Hens and stags</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Venue with stage</fullName>
            </value>
            <value>
                <fullName>Quiz night</fullName>
            </value>
            <value>
                <fullName>Halloween</fullName>
            </value>
            <value>
                <fullName>PR Event</fullName>
            </value>
            <value>
                <fullName>Awards Ceremony/Company Anniversary</fullName>
            </value>
            <value>
                <fullName>Hotel with Accommodation</fullName>
            </value>
            <value>
                <fullName>Networking event</fullName>
            </value>
            <value>
                <fullName>Charity Event</fullName>
            </value>
            <value>
                <fullName>Company Quarterly Event</fullName>
            </value>
            <value>
                <fullName>Sports and Social</fullName>
            </value>
            <value>
                <fullName>Unique Venue</fullName>
            </value>
            <value>
                <fullName>21st Birthday</fullName>
            </value>
            <value>
                <fullName>Other - Tell us in description</fullName>
            </value>
            <value>
                <fullName>Small Conference</fullName>
                <isActive>false</isActive>
                <label>Small Conference</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>