FindaVenue/force-app/main/default/objects/Account/fields/Fingerfood_Price__c.field-meta.xml
<CustomField>
    <fullName>Fingerfood_Price__c</fullName>
    <label>Fingerfood Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>