FindaVenue/force-app/main/default/objects/Account/fields/Food__c.field-meta.xml
<CustomField>
    <fullName>Food__c</fullName>
    <label>Food</label>
    <length>50</length>
    <type>Text</type>
</CustomField>