FindaVenue/force-app/main/default/objects/Account/fields/Food_Options__c.field-meta.xml
<CustomField>
    <fullName>Food_Options__c</fullName>
    <label>Food Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No food</fullName>
            </value>
            <value>
                <fullName>Tea/Coffee/Light refreshments (Conference)</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Bowled Food</fullName>
            </value>
            <value>
                <fullName>Lunch - Sandwiches</fullName>
            </value>
            <value>
                <fullName>Lunch - Cold Buffet</fullName>
            </value>
            <value>
                <fullName>Lunch - Hot Buffet</fullName>
            </value>
            <value>
                <fullName>Lunch - 2 Course Sit Down Meal</fullName>
            </value>
            <value>
                <fullName>Finger food</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>Dinner Buffet</fullName>
            </value>
            <value>
                <fullName>2 Course Dinner</fullName>
            </value>
            <value>
                <fullName>3 Course Dinner</fullName>
            </value>
            <value>
                <fullName>5 Course Dinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>