FindaVenue/force-app/main/default/objects/Account/fields/Food_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Food_Pricing__c</fullName>
    <label>Food Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>