FindaVenue/force-app/main/default/objects/Account/fields/Food_Promotions__c.field-meta.xml
<CustomField>
    <fullName>Food_Promotions__c</fullName>
    <label>Food Promotions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>