FindaVenue/force-app/main/default/objects/Account/fields/Full_Day_Fee__c.field-meta.xml
<CustomField>
    <fullName>Full_Day_Fee__c</fullName>
    <label>Full Day Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>