FindaVenue/force-app/main/default/objects/Account/fields/Half_Day_Fee__c.field-meta.xml
<CustomField>
    <fullName>Half_Day_Fee__c</fullName>
    <label>Half Day Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>