FindaVenue/force-app/main/default/objects/Account/fields/Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>Layout_Type__c</fullName>
    <label>Layout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dinner Setting</fullName>
            </value>
            <value>
                <fullName>Reception (Standing)</fullName>
            </value>
            <value>
                <fullName>Banquet</fullName>
            </value>
            <value>
                <fullName>Board room</fullName>
            </value>
            <value>
                <fullName>Class room</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>U-Shape</fullName>
            </value>
            <value>
                <fullName>Cabaret</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>