FindaVenue/force-app/main/default/objects/Account/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Venue Link</label>
    <type>Url</type>
</CustomField>