FindaVenue/force-app/main/default/objects/Account/fields/Lunch_Price__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Price__c</fullName>
    <label>Lunch Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>