FindaVenue/force-app/main/default/objects/Account/fields/Lunch_Soup_And_Sandwich_Price__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Soup_And_Sandwich_Price__c</fullName>
    <label>Lunch Soup And Sandwich Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>