FindaVenue/force-app/main/default/objects/Account/fields/Number_Of_Events_Hosted__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Events_Hosted__c</fullName>
    <label>Number Of Events Hosted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>