FindaVenue/force-app/main/default/objects/Account/fields/Number_Of_Private_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Private_Rooms__c</fullName>
    <label>Number Of Private Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>