FindaVenue/force-app/main/default/objects/Account/fields/Outdoor_Area__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Area__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outdoor Area</label>
    <type>Checkbox</type>
</CustomField>