FindaVenue/force-app/main/default/objects/Account/fields/Privacy__c.field-meta.xml
<CustomField>
    <fullName>Privacy__c</fullName>
    <label>Privacy</label>
    <length>50</length>
    <type>Text</type>
</CustomField>