FindaVenue/force-app/main/default/objects/Account/fields/Privacy_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Picklist__c</fullName>
    <label>Privacy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private venue</fullName>
            </value>
            <value>
                <fullName>Shared venue</fullName>
            </value>
            <value>
                <fullName>Semi private until a certain time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>