FindaVenue/force-app/main/default/objects/Account/fields/Projector_Screens__c.field-meta.xml
<CustomField>
    <fullName>Projector_Screens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Projector Screens</label>
    <type>Checkbox</type>
</CustomField>