FindaVenue/force-app/main/default/objects/Account/fields/QualityFormula__c.field-meta.xml
<CustomField>
    <fullName>QualityFormula__c</fullName>
    <formula>VALUE(TEXT(Quality_Of_Venue_1_Highest__c))</formula>
    <label>QualityFormula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>