FindaVenue/force-app/main/default/objects/Account/fields/Reception_Standing_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Reception_Standing_Capacity__c</fullName>
    <label>Reception Standing Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>