FindaVenue/force-app/main/default/objects/Account/fields/Relationship_With_Venue_1_Highest__c.field-meta.xml
<CustomField>
    <fullName>Relationship_With_Venue_1_Highest__c</fullName>
    <label>Relationship With Venue (1 Highest)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>