FindaVenue/force-app/main/default/objects/Account/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restaurant</label>
    <type>Checkbox</type>
</CustomField>