FindaVenue/force-app/main/default/objects/Account/fields/Restaurant_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Capacity__c</fullName>
    <label>Restaurant Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>