FindaVenue/force-app/main/default/objects/Account/fields/Room_Hire__c.field-meta.xml
<CustomField>
    <fullName>Room_Hire__c</fullName>
    <label>Room Hire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Ask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>