FindaVenue/force-app/main/default/objects/Account/fields/Room_Hire_Fee__c.field-meta.xml
<CustomField>
    <fullName>Room_Hire_Fee__c</fullName>
    <label>Room Hire Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>