FindaVenue/force-app/main/default/objects/Account/fields/Room_Hire_Minimum_Spend__c.field-meta.xml
<CustomField>
    <fullName>Room_Hire_Minimum_Spend__c</fullName>
    <label>Room Hire Minimum Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>