FindaVenue/force-app/main/default/objects/Account/fields/Room_Layout__c.field-meta.xml
<CustomField>
    <fullName>Room_Layout__c</fullName>
    <label>Room Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>