FindaVenue/force-app/main/default/objects/Account/fields/Sit_Down_Dinner_Price__c.field-meta.xml
<CustomField>
    <fullName>Sit_Down_Dinner_Price__c</fullName>
    <label>Sit Down Dinner Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>