FindaVenue/force-app/main/default/objects/Account/fields/Tea_Coffee_Price__c.field-meta.xml
<CustomField>
    <fullName>Tea_Coffee_Price__c</fullName>
    <label>Tea / Coffee Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>