FindaVenue/force-app/main/default/objects/Account/fields/U_Shape_Capacity__c.field-meta.xml
<CustomField>
    <fullName>U_Shape_Capacity__c</fullName>
    <label>U-Shape Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>