FindaVenue/force-app/main/default/objects/Account/fields/Venue_Location__c.field-meta.xml
<CustomField>
    <fullName>Venue_Location__c</fullName>
    <label>Venue Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>